feat: migrate to hexagonal architecture from layer architecture.